[APPDEV-4203] Minor CSS fix requested by Travis. Changing the color of the line and adding some spacing after carousel.
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@34309 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/tabbedCarousel.css
+++ b/projects/Media/docroot/assets/css/common/tabbedCarousel.css
@@ -162,9 +162,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00c4c4be', e
 }
 
 .product-sample-carousel .product-sample-carousel-bottom{
-	height: 1px;
 	width: 100%;
-	background: #D7D9CE;
+  	padding-top: 10px;
+  	border-bottom: 1px solid #996;
 }
 
 .product-sample-carousel [data-component="carousel"] [data-component="carousel-mask"] ul li {
